sources that right wing parties oppose covid

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -795,3 +795,19 @@ outbreak in Germany},
   year={1974},
   publisher={Wiley Online Library}
 }
+
+@article{wondreys2020victims,
+  title={Victims of the Pandemic? European Far-Right Parties and COVID-19},
+  author={Wondreys, Jakub and Mudde, Cas},
+  journal={Nationalities Papers},
+  pages={1--34},
+  year={2020},
+  publisher={Cambridge University Press}
+}
+
+@article{farias2020violating,
+  title={Violating social distancing amid COVID-19 pandemic: Psychological factors to improve compliance},
+  author={Farias, J{\'e}ssica Esther Machado and Pilati, Ronaldo},
+  year={2020},
+  publisher={PsyArXiv}
+}
