added more theory

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -331,14 +331,14 @@
   publisher={Springer}
 }
 
-@article{simpson2017penalising,
+@article{martins2014penalising,
   title={Penalising model component complexity: A principled, practical approach to constructing priors},
-  author={Simpson, Daniel and Rue, H{\aa}vard and Riebler, Andrea and Martins, Thiago G and S{\o}rbye, Sigrunn H},
-  journal={Statistical science},
-  pages={1--28},
-  year={2017},
-  publisher={JSTOR}
+  author={Martins, Thiago G and Simpson, Daniel P and Riebler, Andrea and Fuglstad, GA and Rue, H and S{\o}rbye, SH},
+  journal={arXiv preprint arXiv:1403.4630},
+  year={2014},
+  publisher={Citeseer}
 }
+
 
 @article{kullback1951information,
   title={On information and sufficiency},
@@ -810,4 +810,11 @@ outbreak in Germany},
   author={Farias, J{\'e}ssica Esther Machado and Pilati, Ronaldo},
   year={2020},
   publisher={PsyArXiv}
+}
+
+@article{yezli2020covid,
+  title={COVID-19 pandemic: it is time to temporarily close places of worship and to suspend religious gatherings},
+  author={Yezli, Saber and Khan, Anas},
+  journal={Journal of travel medicine},
+  year={2020}
 }
