--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -92,9 +92,9 @@
 \input{chapter-introduction}   
 \input{chapter-coronavirus}  
 \input{chapter-bayes}
-\input{chapter-geodata}
-\input{chapter-datacollection}
-\input{chapter-analysis}
+%\input{chapter-geodata}
+%\input{chapter-datacollection}
+%\input{chapter-analysis}
 \input{chapter-appendix}
 %\input{chapter-discussion}
 
